fixed minor error

--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -12,7 +12,7 @@ layout: default
 
   {% assign filtered_posts = site.posts | where: pagecollection, page.slug %}
   {% for post in filtered_posts %}
-  {% include cardhorizental.html %}
+  {% include cardHorizental.html %}
 
     {% endfor %}
 </div>
