--- a/_includes/cardSmall.html
+++ b/_includes/cardSmall.html
@@ -1,8 +1,8 @@
   <div class="card bg-transparent border-0" >
     <a class="link-light-box" href="{{post.url}}">
     <div class="card-body card-body border border-3 border-dark">
-      <h5 class="card-title">{{post.title}}</h5>
-      <p class="card-text persianDate">{{post.date}}</p>
+      <h6 class="card-title">{{post.title | truncatewords: 8}}</h6>
+      <p class="card-text persianDate" data-timestamp="{{post.date | date: '%s'}}"></p>
     </div>
   </a>
   </div>
