--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -208,3 +208,8 @@ blockquote p {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+#editor {
+  height: 500px;
+  padding: 10px;
+  font-size: 1rem;
+}
