--- a/_includes/cardHorizental.html
+++ b/_includes/cardHorizental.html
@@ -1,18 +1,16 @@
-{% if pagecollection == 'categories' %}
 {% for type in post.types %}{% assign typ = site.types | where: 'slug', type | first %}
 {% if typ %}{% assign topcat = typ.title %}{% assign topcaturl = typ.url %}{% endif %}
 {% endfor %}
-{% else %}
 {% for category in post.categories %}{% assign cat = site.categories | where: 'slug', category | first %}
-{% if cat %}{% assign topcat = cat.title %}{% assign topcaturl = cat.url %}{% endif %}
+{% if cat %}{% assign botcat = cat.title %}{% assign botcaturl = cat.url %}{% endif %}
 {% endfor %}
-{% endif %}
 {% for author in post.authors %}{% assign auth = site.authors | where: 'slug', author | first %}
 {% if auth %}
 {% assign pageauthor = auth.title %}
 {% assign pageauthorurl = auth.url %}
 {% else %}
 {% assign pageauthor = post.authors %}
+{% assign pageauthorurl = false %}
 {% endif %}
 {% endfor %}
 {% if post.featureImg %}
@@ -42,18 +40,20 @@
               </div>
               <div class="px-3 pb-3">
                 <h5 class="card-title"><a href="{{post.url}}">{% if post.shortTitle%}{{post.shortTitle}}{%else%}{{post.title}}{%endif%}</a></h5>
-                {%if pageauthorurl%}<a href="{{pageauthorurl}}"><h6>{{pageauthor}}</h6></a>{%else%}<h6>{{pageauthor}}</h6>{%endif%}
+                {%if pageauthorurl %}<a href="{{pageauthorurl}}"><h6>{{pageauthor}}</h6></a>{%else%}<h6>{{pageauthor}}</h6>{%endif%}
                 <p class="card-text">{{post.content | truncatewords: 20  | strip_html}}</p>
               </div>
               <div class="d-flex flex-row mb-0 justify-content-end">
-                <div class="persianDate h5 py-2 px-3 mt-auto border bg-light border-3 border-dark mb-0 border-bottom-0 border-right-0">
-                  {{post.date}}
+                {% if botcat %}<a class="link-light-box" href="{{botcaturl}}">
+                    <div class="h5 py-2 px-3 mt-auto border bg-light border-3 border-dark mb-0 border-bottom-0 border-right-0">
+                      {{botcat}}
+                    </div>
+                </a>{% endif %}
+                <div class="persianDate h5 py-2 px-3 mt-auto border bg-light border-3 border-dark mb-0 border-bottom-0 border-right-0" data-timestamp="{{post.date | date: '%s'}}">
                 </div>
               </div>
-
             </div>
           </div>
       </div>
   </div>
-
 </div>
