--- a/_includes/sectionArchiveTop.html
+++ b/_includes/sectionArchiveTop.html
@@ -1,3 +1,8 @@
+{% if page.collection == "categories" %}
+{% for type in page.type %}{% assign typ = site.types | where: 'slug', type | first %}
+{% if typ %}{% assign pagetopcat = typ.title %}{% assign pagetopcaturl = typ.url %}{% endif %}
+{% endfor %}
+{% endif %}
 <section id="topSection" class="py-5 bg-black" style="{% if page.background %} background-image:linear-gradient(#000000dd, #000000dd),url('{{page.background}}'); {%else%}background-image:linear-gradient(#000000dd, #000000dd),url('/assets/img/topSectionBg.jpg');{%endif%}">
   <div class="container-fluid">
     <div class="col-12">
@@ -10,11 +15,21 @@
               {%endif%}
               <div class="col-sm mt-5">
                 <div class="card-body border border-3 border-dark mt-0  bg-light p-0">
+                  {% if pagetopcat %}
+                  <div class="d-flex flex-row mb-0">
+                    <a class="link-light-box" href="{{topcaturl}}">
+                      <div class="h5 py-2 px-3 mt-auto border bg-light border-3 border-dark mb-0 border-top-0 border-left-0">
+                        {{pagetopcat}}
+                      </div>
+                    </a>
+                  </div>
+                  {% else %}
                   <div class="d-flex flex-row mb-0">
                     <div class="h5 py-2 px-3 mt-auto border bg-light border-3 border-dark mb-0 border-top-0 border-left-0">
                       {{pcollection.title}}
                     </div>
                   </div>
+                  {% endif %}
                   <div class="px-3">
                     <h1 class="card-title">{{page.title}} </h1>
                     <h4><?php echo $author;  ?></h4>
