--- a/_includes/sectionPostTop.html
+++ b/_includes/sectionPostTop.html
@@ -38,8 +38,7 @@
         </a>
         {% endif %}
         {% endfor %}
-        <div class="persianDate h4 py-2 px-3 mt-auto border border-3 border-white float-right text-center" style="min-width:250px">
-          {{page.date }}
+        <div class="persianDate h4 py-2 px-3 mt-auto border border-3 border-white float-right text-center" style="min-width:250px" data-timestamp="{{page.date | date: '%s'}}">
         </div>
       </div>
     </div>
