--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,17 +7,14 @@
     <link rel="stylesheet" href="/assets/vendors/bootstrap.min.css">
     {% if page.jsFile == 'edit.js' %}<link rel="stylesheet" href="/assets/vendors/bootstrap-markdown.min.css">{% endif %}
     <link rel="stylesheet" href="/assets/vendors/fontawesome/css/all.css">
-    <link rel="stylesheet" href="/assets/vendors/trumbowyg/ui/trumbowyg.min.css">
     <link rel="stylesheet" href="/assets/vendors/lightbox/ekko-lightbox.css">
-    <link rel="stylesheet" href="/assets/css/asmaneh.css">
+    <link rel="stylesheet" href="/assets/css/asmaneh.css?v=1">
     <script type="text/javascript" src="/assets/vendors/jquery.min.js"></script>
     <script type="text/javascript" src="/assets/vendors/bootstrap.min.js"></script>
     {% if page.jsFile == 'edit.js' %}<script src="/assets/vendors/markdown.js"></script>{% endif %}
     {% if page.jsFile == 'edit.js' %}<script src="/assets/vendors/to-markdown.js"></script>{% endif %}
     {% if page.jsFile == 'edit.js' %}<script src="/assets/vendors/bootstrap-markdown.js"></script>{% endif %}
     {% if page.jsFile == 'edit.js' %}<script src="/assets/vendors/bootstrap-markdown.fa.js"></script>{% endif %}
-    <script src="/assets/vendors/moment.js"></script>
-    <script src="/assets/vendors/moment-jalaali.js"></script>
     <script src="/assets/vendors/lightbox/ekko-lightbox.min.js"></script>
   </head>
   <body>
@@ -30,29 +27,26 @@
       <div>
         <ul id="results-container"></ul>
       </div>
-
     </div>
     <main id="main" role="main">
       {% include nav-top.html %}
       {{content}}
       {% include footer.html %}
-
     </main>
   </body>
 </html>
 <script src="/assets/js/simple-jekyll-search.min.js"></script>
-<script type="text/javascript" src="/assets/js/functions.js"></script>
-<script type="text/javascript" src="/assets/js/asmaneh.js"></script>
-{% if page.jsFile %}<script type="text/javascript" src="/assets/js/{{page.jsFile}}"></script>{% endif %}
-<script src="https://alitayebi.com/asmaneh/dist.js" defer async></script>
-
+<script type="text/javascript" src="/assets/js/functions.js?v=1"></script>
+<script type="text/javascript" src="/assets/js/asmaneh.js?v=1"></script>
+{% if page.jsFile %}<script type="text/javascript" src="/assets/js/{{page.jsFile}}?v=1"></script>{% endif %}
+{% if page.access == 'users' %}<script src="https://alitayebi.com/asmaneh/dist.js" defer async></script>{% endif %}
 <script>
   window.simpleJekyllSearch = new SimpleJekyllSearch({
     searchInput: document.getElementById('search-input'),
     resultsContainer: document.getElementById('results-container'),
     json: '{{ site.baseurl }}/search.json',
     searchResultTemplate: '<li><a href="{url}?query={query}" title="{desc}">{title}</a></li>',
-    noResultsText: 'No results found',
+    noResultsText: 'نتیجه‌‌ای یافت نشد.',
     limit: 10,
     fuzzy: false,
     exclude: ['Welcome']
