--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,10 @@ layout: default
       <div class="row justify-content-md-center">
         <div class="col col-lg-8" markdown="1">
           {{page.content}}
+          {{page.embedCode}}
         </div>
+      </div>
+      <div class="row">
       </div>
       <div class="row">
         {% if page.gallery %}
