--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -10,11 +10,15 @@ layout: default
     <div class="container-fluid px-5 py-4">
       <div class="row">
 
-  {% assign filtered_posts = site.posts | where: pagecollection, page.slug %}
-  {% for post in filtered_posts %}
-  {% include cardHorizental.html %}
-
-    {% endfor %}
+        {% assign filtered_posts = site.posts | where: pagecollection, page.slug  %}
+        {% if page.sortby %}
+        {% assign filtered_sort_posts = filtered_posts | sort: page.sortby %}
+        {% else %}
+        {% assign filtered_sort_posts = filtered_posts %}
+        {% endif %}
+        {% for post in filtered_sort_posts %}
+        {% include cardHorizental.html %}
+        {% endfor %}
 </div>
 </div>
 </section>
