update js versions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     {% if page.jsFile == 'edit.js' %}<link rel="stylesheet" href="/assets/vendors/bootstrap-markdown.min.css">{% endif %}
     <link rel="stylesheet" href="/assets/vendors/fontawesome/css/all.css">
     <link rel="stylesheet" href="/assets/vendors/lightbox/ekko-lightbox.css">
-    <link rel="stylesheet" href="/assets/css/asmaneh.css?v=1">
+    <link rel="stylesheet" href="/assets/css/asmaneh.css?v=1.01">
     <script type="text/javascript" src="/assets/vendors/jquery.min.js"></script>
     <script type="text/javascript" src="/assets/vendors/bootstrap.min.js"></script>
     {% if page.jsFile == 'edit.js' %}<script src="/assets/vendors/markdown.js"></script>{% endif %}
@@ -36,10 +36,10 @@
   </body>
 </html>
 <script src="/assets/js/simple-jekyll-search.min.js"></script>
-<script type="text/javascript" src="/assets/js/functions.js?v=1"></script>
-<script type="text/javascript" src="/assets/js/asmaneh.js?v=1"></script>
-{% if page.jsFile %}<script type="text/javascript" src="/assets/js/{{page.jsFile}}?v=1"></script>{% endif %}
-{% if page.access == 'users' %}<script src="https://alitayebi.com/asmaneh/dist.js" defer async></script>{% endif %}
+<script type="text/javascript" src="/assets/js/functions.js?v=1.01"></script>
+<script type="text/javascript" src="/assets/js/asmaneh.js?v=1.01"></script>
+{% if page.jsFile %}<script type="text/javascript" src="/assets/js/{{page.jsFile}}?v=1.01"></script>{% endif %}
+{% if page.access == 'users' %}<script src="https://alitayebi.com/asmaneh/dist.js?v=1.01" defer async></script>{% endif %}
 <script>
   window.simpleJekyllSearch = new SimpleJekyllSearch({
     searchInput: document.getElementById('search-input'),
